recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.error
Sierpinski:8: error: ';' expected but ')' found.
  droite45)
          ^