recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.code
def sierpinski(levels:Int, length:Double) {
  if (levels==0) avance(length)
  else {
  sierpinski(levels-1, length/2)
  droite(45)
  sierpinski(levels-1, length/2)
  droite(45)
  sierpinski(levels-1, length/2)
  droite45)
  
  
  }
}